Issue #DOKK-316 by tuj: Added correct style. Clear cache on settings change.

--- a/templates/itk_instagram_hashtag.html.twig
+++ b/templates/itk_instagram_hashtag.html.twig
@@ -1,4 +1,6 @@
-<div class="instagram-hashtag--container">
-  <div class="instagram-hashtag--title">#{{ instagram_hashtag }}</div>
-  <div class="instagram-hashtag--content" id="instafeed--{{ instagram_hashtag }}"></div>
-</div>
+<section class="instagram-gallery">
+  <header>
+    <h3 class="instagram-gallery--title">#{{ instagram_hashtag }}</h3>
+  </header>
+  <div class="instagram-gallery--wrapper" id="instafeed--{{ instagram_hashtag }}"></div>
+</section>
