--- a/templates/itk_instagram_hashtag.html.twig
+++ b/templates/itk_instagram_hashtag.html.twig
@@ -1,6 +1,8 @@
 <section class="instagram-gallery">
   <header>
-    <h3 class="instagram-gallery--title">#{{ instagram_hashtag }}</h3>
+    <h3 class="instagram-gallery--title">
+      <a href="https://instagram.com/explore/tags/{{ instagram_hashtag }}">#{{ instagram_hashtag }}</a>
+    </h3>
   </header>
   <div class="instagram-gallery--wrapper" id="instafeed--{{ instagram_hashtag }}"></div>
 </section>
